legends fix: mobile menu hover and spacings

--- a/src/legends/modules/landing/components/Adventure/Adventure.module.scss
+++ b/src/legends/modules/landing/components/Adventure/Adventure.module.scss
@@ -40,7 +40,7 @@
     }
   }
   @include on-mobile {
-    padding: 5rem 1.5rem;
+    padding: 5rem 1.5rem 2rem;
 
     .items {
       grid-template-columns: 1fr;
